apps/base/photoprism/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-photoprism
  labels:
    trust.cert-manager.io/inject-bundle: "true"
