apps/base/photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: app-photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: mariadb
          image: mariadb:11-ubi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb

        - name: photoprism
          image: photoprism/photoprism:250707-ce
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: originals
            - mountPath: /photoprism/storage
              name: storage
            - mountPath: /photoprism/import
              name: import
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: originals
        - name: storage
          persistentVolumeClaim:
            claimName: storage
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
        - name: import
          persistentVolumeClaim:
            claimName: import
