apps/base/photoprism/photoprism.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: app-photoprism
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: photoprism
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.arpa/zfs-pool
                    operator: In
                    values:
                      - "true"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: photoprism
          image: photoprism/photoprism:251130-ce
          resources:
            requests:
              cpu: 20m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 2342
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 2342
            initialDelaySeconds: 180
            periodSeconds: 5
            failureThreshold: 30
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: originals
            - mountPath: /photoprism/storage
              name: storage
            - mountPath: /photoprism/import
              name: import
            - name: cluster-ca-bundle
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
              readOnly: true
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
        - name: import
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-photoprism/import
            type: Directory
        - name: originals
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-photoprism/originals
            type: Directory
        - name: cluster-ca-bundle
          configMap:
            name: cluster-ca-bundle
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: app-photoprism

spec:
  ports:
    - name: http
      port: 2342
      targetPort: http
  selector:
    app: photoprism
