apps/base/photoprism/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: app-photoprism

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`photoprism.cluster.arpa`)
      kind: Rule
      services:
        - name: photoprism
          namespace: app-photoprism
          port: http
  tls:
    secretName: traefik-tls
