apps/base/photoprism/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: app-photoprism

spec:
  ports:
    - name: http
      port: 2342
  selector:
    app: photoprism
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: app-photoprism

spec:
  entryPoints:
    - web

  routes:
    - match: HostRegexp(`^photoprism\..*`)
      kind: Rule
      services:
        - name: photoprism
          namespace: app-photoprism
          port: 2342
